--- a/Express2.0/public/css/product.css
+++ b/Express2.0/public/css/product.css
@@ -1,10 +1,3 @@
-.centered {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
 .product-form {
     width: 20rem;
     max-width: 90%;
